# constellation-rust

./: .gitignore  Cargo.toml  README.md  installation-guide-das5.org
examples/: hello_world.rs  vector_add.rs
examples/vector_add/: compute_activity.rs  context.rs  main.rs  payload.rs
src/: activity.rs  activity_identifier.rs  constellation.rs  constellation_config.rs  constellation_factory.rs  constellation_identifier.rs  constellation_properties.rs  context.rs  event.rs  lib.rs  message.rs  payload.rs  steal_strategy.rs
src/implementation/: ConstellationIdentifierFactory.rs  activity_identifier.rs  activity_wrapper.rs  constellation_identifier.rs  error.rs  event_queue.rs  inner_constellation.rs  message.rs  mod.rs  single_threaded_constellation.rs  thread_helper.rs  work_queue.rs
src/implementation/communication/: mod.rs  mpi_info.rs  node_handler.rs
src/implementation/constellation_files/: executor_thread.rs  inner_constellation.rs  mod.rs  multi_threaded_constellation.rs  single_threaded_constellation.rs  thread_helper.rs
src/implementation/multi_threaded_constellation/: mod.rs  multi_threaded_constellation.rs
src/implementation/single_constellation/: executor_thread.rs  inner_constellation.rs  mod.rs  single_threaded_constellation.rs
src/implementation/single_threaded_constellation/: executor_thread.rs  inner_constellation.rs  mod.rs  single_threaded_constellation.rs
src/util/activities/: mod.rs  single_event_collector.rs
